--- a/app/src/main/res/navigation/login_nav.xml
+++ b/app/src/main/res/navigation/login_nav.xml
@@ -3,15 +3,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_nav"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/accessFragment">
+
+    <fragment
+        android:id="@+id/accessFragment"
+        android:name="com.bibliotecadebolso.app.ui.appAccess.access.AccessFragment"
+        android:label="fragment_access_activity"
+        tools:layout="@layout/fragment_access" >
+        <action
+            android:id="@+id/action_accessActivity_to_signUpFragment"
+            app:destination="@id/signUpFragment"
+            app:popUpTo="@id/accessFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_accessActivity_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/accessFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.bibliotecadebolso.app.ui.appAccess.login.LoginFragment"
-        android:label="LoginFragment" />
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment"
+            app:popUpTo="@id/accessFragment" />
+    </fragment>
     <fragment
         android:id="@+id/signUpFragment"
         android:name="com.bibliotecadebolso.app.ui.appAccess.register.SignUpFragment"
         android:label="fragment_sign_up"
-        tools:layout="@layout/fragment_sign_up" />
+        tools:layout="@layout/fragment_sign_up" >
+        <action
+            android:id="@+id/action_signUpFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/accessFragment" />
+    </fragment>
+
 </navigation>
