Add new layout to fragment_access and fragment_login

--- a/app/src/main/res/layout/fragment_access.xml
+++ b/app/src/main/res/layout/fragment_access.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:text="@string/label_app_name"
         android:textSize="35sp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:fontFamily="@font/glass_antiqua_regular"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/iv_logo"
