Change img_library location and reduce logo size

--- a/app/src/main/res/layout/fragment_access.xml
+++ b/app/src/main/res/layout/fragment_access.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/img_library"
+    tools:background="@drawable/img_library"
     tools:context=".ui.appAccess.access.AccessFragment">
 
     <ImageView
@@ -12,7 +12,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="30dp"
-        android:src="@drawable/ic_astronaut_reader"
+        android:src="@drawable/logo_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
