--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!--Integer Value that number of column in RecyclerView-->
+    <integer name="book_list_preview_columns">2</integer>
+
+    <!-- inter spacing between RecyclerView's Item-->
+    <dimen name="book_list_spacing">16dp</dimen>
+
 </resources>
