--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,6 @@
 
     <!-- inter spacing between RecyclerView's Item-->
     <dimen name="book_list_spacing">16dp</dimen>
+    <dimen name="default_toolbar_corner_radius">32dp</dimen>
 
 </resources>
