--- a/app/src/main/res/drawable/bg_add_book_offline.xml
+++ b/app/src/main/res/drawable/bg_add_book_offline.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
 
 
-    <solid android:color="?attr/colorPrimary" />
+    <solid android:color="@color/white" />
 
     <corners
         android:topLeftRadius="32dp"
