--- a/app/src/main/res/layout/fragment_add_book_offline_input.xml
+++ b/app/src/main/res/layout/fragment_add_book_offline_input.xml
@@ -4,20 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/splash_screen_dark_purple"
-    android:padding="16dp">
+    android:background="@color/splash_screen_dark_purple">
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/progress_sending"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:indicatorColor="?attr/colorPrimary"
-        app:trackColor="@color/splash_screen_dark_purple"
         android:indeterminate="true"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        app:indicatorColor="?attr/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:trackColor="@color/splash_screen_dark_purple" />
+
+    <ImageView
+        android:id="@+id/iv_book_preview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:minWidth="120dp"
+        android:minHeight="150dp"
+        android:src="@drawable/ic_item_book"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/progress_sending" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/et_book_title"
@@ -31,11 +42,13 @@
         app:boxStrokeColor="@color/text_input_layout_white_stroke_color"
         app:helperText="* Required"
         app:helperTextEnabled="true"
-
+        app:errorTextColor="@color/error_tint_on_dark_color"
+        app:boxStrokeErrorColor="@color/error_tint_on_dark_color"
+        app:errorIconTint="@color/error_tint_on_dark_color"
         app:helperTextTextColor="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/progress_sending">
+        app:layout_constraintTop_toBottomOf="@id/iv_book_preview">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -45,86 +58,106 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-    <ImageView
-        android:id="@+id/iv_book_preview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="120dp"
-        android:minHeight="150dp"
-        android:layout_marginTop="32dp"
-        android:src="@drawable/ic_item_book"
-        app:layout_constraintBottom_toBottomOf="@id/et_book_publisher"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_book_title" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/et_book_author"
-        style="@style/Theme.MyApplication.TextInputLayout.FilledGray"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:hint="@string/label_author"
-        app:boxBackgroundColor="@color/splash_screen_dark_purple"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_book_preview"
-        app:layout_constraintTop_toBottomOf="@id/et_book_title">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/gray_transparent_60" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/et_book_publisher"
-        style="@style/Theme.MyApplication.TextInputLayout.FilledGray"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:hint="@string/label_publisher"
-        app:boxBackgroundColor="@color/splash_screen_dark_purple"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_book_preview"
-        app:layout_constraintTop_toBottomOf="@id/et_book_author">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/gray_transparent_60" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/et_book_description"
-        style="@style/Theme.MyApplication.TextInputLayout.FilledGray"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:hint="@string/label_description"
-        app:boxBackgroundColor="@color/splash_screen_dark_purple"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_book_preview">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center|top"
-            android:minLines="2"
-            android:padding="40dp"
-            android:textColor="@color/gray_transparent_60" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-
     <Button
         android:id="@+id/btn_add_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/gd_blue_purple_1"
         android:text="@string/label_add_book"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@id/et_book_title"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_additional_info"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:paddingTop="16dp"
+        android:background="@drawable/bg_add_book_offline"
+        app:layout_constraintTop_toBottomOf="@id/btn_add_book"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/et_book_author"
+            style="@style/Theme.MyApplication.TextInputLayout.FilledBlack"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:hint="@string/label_author"
+            app:boxBackgroundColor="@android:color/transparent"
+            app:layout_constraintEnd_toStartOf="@id/et_book_publisher"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/gray_transparent_80" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/et_book_publisher"
+            style="@style/Theme.MyApplication.TextInputLayout.FilledBlack"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:hint="@string/label_publisher"
+            app:boxBackgroundColor="@android:color/transparent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/et_book_author"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/gray_transparent_80" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/et_book_isbn_10_or_13"
+            style="@style/Theme.MyApplication.TextInputLayout.FilledBlack"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="16dp"
+            android:layout_marginHorizontal="50dp"
+            android:hint="@string/label_isbn_10_or_13"
+            app:boxBackgroundColor="@android:color/transparent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_book_publisher">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/gray_transparent_80" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/et_book_description"
+            style="@style/Theme.MyApplication.TextInputLayout.FilledBlack.NoUnderline"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="16dp"
+            android:layout_marginHorizontal="16dp"
+            android:hint="@string/label_description"
+            app:boxBackgroundColor="@android:color/transparent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_book_isbn_10_or_13">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center|top"
+                android:minLines="2"
+                android:padding="40dp"
+                android:textColor="@color/gray_transparent_80" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
