--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -46,6 +46,22 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="Theme.MyApplication.PurpleTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/gd_blue_purple_1</item>
+        <item name="colorPrimaryVariant">#492376</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:background">@color/splash_screen_dark_purple</item>
+        <!-- Customize your theme here. -->
+    </style>
+
+
     <style name="TintedNavigation" parent="ThemeOverlay.MaterialComponents.Toolbar.Primary">
         <item name="colorOnPrimary">@color/gd_blue_purple_4</item>
     </style>
@@ -79,6 +95,11 @@
         <item name="boxStrokeColor">@color/text_input_layout_black_stroke_color_no_underline</item>
         <item name="android:textColorHint">@color/gray_transparent_80</item>
         <item name="android:editTextStyle">@style/TextInputEditTextFilledBlack</item>
+        <item name="boxBackgroundColor">@color/box_bg_color_white</item>
+    </style>
+
+    <style name="Widget.MyApp.TextInputLayout" parent="Widget.Design.TextInputLayout">
+
     </style>
 
     <style name="TextInputEditTextFilledGray" parent="Widget.MaterialComponents.TextInputEditText.FilledBox">
