--- a/app/src/main/res/layout/fragment_add_book_offline_input.xml
+++ b/app/src/main/res/layout/fragment_add_book_offline_input.xml
@@ -94,7 +94,7 @@
                 android:layout_marginHorizontal="50dp"
                 android:layout_marginVertical="16dp"
                 android:hint="@string/label_author"
-                app:boxBackgroundColor="@android:color/transparent"
+                app:boxBackgroundColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -103,6 +103,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+
                     android:textColor="@color/gray_transparent_80" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -135,7 +136,7 @@
                 android:layout_marginHorizontal="50dp"
                 android:layout_marginVertical="16dp"
                 android:hint="@string/label_isbn_10_or_13"
-                app:boxBackgroundColor="@android:color/transparent"
+                app:boxBackgroundColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/et_book_publisher">
@@ -158,6 +159,7 @@
                 android:layout_marginVertical="16dp"
                 android:hint="@string/label_description"
                 android:background="@color/white"
+                app:boxBackgroundColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/et_book_isbn_10_or_13">
