--- a/app/src/main/res/layout/item_search_book_template.xml
+++ b/app/src/main/res/layout/item_search_book_template.xml
@@ -5,7 +5,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:background="@drawable/bg_item_book"
     android:maxWidth="180dp"
     android:maxHeight="220dp"
     android:minWidth="180dp"
@@ -36,6 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_book_default"
+        android:textColor="@color/white"
 
         tools:text="The great mage returned after 4000 years" />
 
@@ -43,10 +43,12 @@
         android:id="@+id/tv_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="end"
+        android:gravity="center"
 
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/white"
 
         tools:text="By author" />
 
