--- a/app/src/main/res/layout/fragment_add_book_offline_input.xml
+++ b/app/src/main/res/layout/fragment_add_book_offline_input.xml
@@ -63,6 +63,27 @@
                 android:textColor="@color/white" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/et_book_author"
+            style="@style/Theme.MyApplication.SplashScreenTheme.Blue.TextInputLayout.FilledBlack.NoUnderline"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginVertical="16dp"
+            android:hint="@string/label_author"
+            app:boxBackgroundColor="@color/splash_screen_dark_purple"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_book_title">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+
+                android:textColor="@color/gd_blue_purple_3" />
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <Button
             android:id="@+id/btn_add_book"
@@ -72,13 +93,13 @@
             android:backgroundTint="@color/gd_blue_purple_1"
             android:text="@string/label_add_book"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/et_book_title" />
+            app:layout_constraintTop_toBottomOf="@id/et_book_author" />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_additional_info"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="16dp"
             android:background="@drawable/bg_add_book_offline"
             android:paddingTop="16dp"
@@ -86,26 +107,7 @@
             app:layout_constraintTop_toBottomOf="@id/btn_add_book"
             >
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/et_book_author"
-                style="@style/Theme.MyApplication.TextInputLayout.FilledBlack"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="50dp"
-                android:layout_marginVertical="16dp"
-                android:hint="@string/label_author"
-                app:boxBackgroundColor="@android:color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-
-                    android:textColor="@color/gray_transparent_80" />
-            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/et_book_publisher"
@@ -117,7 +119,7 @@
                 android:hint="@string/label_publisher"
                 app:boxBackgroundColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/et_book_author"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 >
 
@@ -168,7 +170,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center|top"
-                    android:minLines="2"
+                    android:minLines="6"
                     android:padding="40dp"
                     android:textColor="@color/gray_transparent_80" />
             </com.google.android.material.textfield.TextInputLayout>
